# lv2-host-minimal

./: Cargo.toml  README.md
src/: bin.rs  lib.rs  lv2.rs  main.rs
