[package]
name = "lv2-host-minimal"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lv2hm"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
lilv-sys = "0.2.1"
lv2_raw = "0.2.0"
lv2-urid = "2.1.0"
lv2-sys = "2.0.0"
urid = "0.1.0"
hound = "3.4.0"
