[package]
name = "lv2-host-minimal"
version = "0.1.4"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"
description = "A very minimal lv2 host."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ocdy1001/lv2-host-minimal"
keywords = ["lv2","host","plugin"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lv2hm"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
lilv-sys = "0.2.1"
lv2_raw = "0.2.0"
hound = "3.4.0"

lv2-atom = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" , default-features = false }
lv2-midi = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-urid = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-sys = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
urid = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop", default-features = false }

[patch.crates-io]
lv2-atom = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-midi = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-units = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-urid = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-core = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
lv2-sys = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }
urid = { git = "https://github.com/RustAudio/rust-lv2", branch = "develop" }